# multimodal-retrieval-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: index.py  ingest.py
app/core/: config.py  db.py  logging_factory.py  mongo_client.py  registry.py  request_context.py  s3.py
app/embedding/: build_sim.py  build_text.py  build_ts.py  engine.py  sim_simple.py  store.py  text_sbert.py  ts_simple.py
app/indexing/: engine.py  faiss_index.py  schemas.py
app/ingestion/: base.py  simulation_ingestor.py  text_ingestor.py  timeseries_ingestor.py
app/models/: pivot.py
app/preprocessing/: adapters.py  normalize.py  pipeline.py
data/raw/: example_timeseries.csv
scripts/: ingest_all.py
tests/api/: test_ingest_routes.py
tests/core/: test_logging_factory.py  test_request_context.py
tests/embeddings/: test_build_sim.py  test_build_text.py  test_build_ts.py  test_engine_and_motors.py  test_sim_ts_simple.py  test_store.py  test_text_sbert.py
tests/ingestion/: test_base_ingestor.py  test_simulation_ingestor.py  test_text_ingestor.py  test_timeseries_ingestor.py
tests/models/: test_pivot.py
tests/preprocessing/: test_adapters.py  test_normalize.py  test_pipeline.py
