[project]
name = "multimodal-retrieval-system"
version = "0.1.0"
description = "Prototype of a multimodal retrieval engine combining text, structure, and experimental data to support material discovery through hybrid search (FAISS + FastAPI)."
authors = [
    {name = "Mohamed K.",email = "contact@mkstudio.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pymongo (>=4.14.0,<5.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "streamlit (>=1.48.0,<2.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "sentry-sdk (>=2.34.1,<3.0.0)",
    "opentelemetry-api (>=1.36.0,<2.0.0)",
    "opentelemetry-sdk (>=1.36.0,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [
  { include = "app" }
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
coverage = "^7.10.2"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
